--- a/LeonardoDaVinci.html
+++ b/LeonardoDaVinci.html
@@ -1,5 +1,14 @@
 <html>
+<head>
+<title>Leonardo da Vinci</title>
+</head>
+<h3>
+Leonardo da Vinci
+</h3>
 <p>
 This is where I will put info on Leonardo da Vinci
+</p>
+<p>
+<a href="index.html">Back to home page</a>
 </p>
 </html>
