--- a/PapaLouie.html
+++ b/PapaLouie.html
@@ -1,13 +1,14 @@
 <html>
-	<head>
-		<title>Papa Louie</title>
-	</head>
-	<h3>
-	Papa Louie
-	</h3>
-	<p>
-	<embed width=1100 height=800 src="papalouie/papalouie_v2.swf">
-
-
-	</p>
+<head>
+<title>Papa Louie</title>
+</head>
+<h3>
+Papa Louie
+</h3>
+<p>
+<embed width=1100 height=800 src="papalouie/papalouie_v2.swf">
+</p>
+<p>
+<a href="index.html">Back to home page</a>
+</p>
 </html>
