--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
-<p>
-It WORKS!!
-</p>
+<head>
+<title>Home Page</title>
+</head>
+<h3>
+Home Page
+</h3>
 <a href="LeonardoDaVinci.html">Leonardo Da Vinci</a>
 <br>
 <a href="PapaLouie.html">Papa Louie</a>
