Added Winged Bullet/fixed Papa Louie

--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@ Home Page
 <a href="LeonardoDaVinci.html">Leonardo Da Vinci</a>
 <br>
 <a href="PapaLouie.html">Papa Louie</a>
+<br>
+<a href="WingedBullet.html">Winged Bullet</a>
 </html>
