--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@ Home Page
 <a href="PapaLouie.html">Papa Louie</a>
 <br>
 <a href="WingedBullet.html">Winged Bullet</a>
+ <br>
+ <a href="StickyNinga.html">Sticky Ninga</a>
 </html>
