--- a/StickyNinja.html
+++ b/StickyNinja.html
@@ -1,8 +1,7 @@
 <html>
 <head>
-<title>Sticky Ninja</title>
+<title>Sticky Ninga</title>
 </head>
 <br>
 <embed width="750" height="500" base="https://external.kongregate-games.com/gamez/0012/8734/live/" src="https://external.kongregate-games.com/gamez/0012/8734/live/embeddable_128734.swf" type="application/x-shockwave-flash"></embed>
-<br>
 <a href="index.html>Back to home page</a>
