--- a/StickyNinja.html
+++ b/StickyNinja.html
@@ -1,7 +1,12 @@
 <html>
 <head>
-<title>Sticky Ninga</title>
+<title>Sticky Ninja</title>
 </head>
+<p>
+<h3>
+Sticky Ninja
+</h3>
+</p>
 <br>
 <embed width="750" height="500" base="https://external.kongregate-games.com/gamez/0012/8734/live/" src="https://external.kongregate-games.com/gamez/0012/8734/live/embeddable_128734.swf" type="application/x-shockwave-flash"></embed>
 <a href="index.html>Back to home page</a>
