--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Home Page
 <br>
 <a href="WingedBullet.html">Winged Bullet</a>
  <br>
- <a href="StickyNinja.html">Sticky Ninga</a>
+ <a href="StickyNinja.html">Sticky Ninja</a>
 <br>
- <a href="StickyNinjaMissions.html">Sticky Ninga Missions</a>
+ <a href="StickyNinjaMissions.html">Sticky Ninja Missions</a>
 </html>
