--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@ Home Page
  <a href="StickyNinja.html">Sticky Ninja</a>
 <br>
  <a href="StickyNinjaMissions.html">Sticky Ninja Missions</a>
+ <br>
+ <a href="FeedMeMoar.html">Feed Me Moar</a>
 </html>
