--- a/LeonardoDaVinci.html
+++ b/LeonardoDaVinci.html
@@ -6,7 +6,7 @@
 Leonardo da Vinci
 </h3>
 <p>
-This is where I will put info on Leonardo da Vinci
+Painter, inventor, traveller. Leonardo was many things. He lived a good life, full of excitement and fun, but also stress and pressure. He had a major impact on the modern world! Why don’t we learn a bit more about him?
 </p>
 <p>
 <a href="index.html">Back to home page</a>
