--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <h3>
 Home Page
 </h3>
+ <a href="LeonardoDaVinci.html">Leonardo da Vinci</a>
+ <br>
 <a href="PapaLouie.html">Papa Louie</a>
 <br>
 <a href="WingedBullet.html">Winged Bullet</a>
