--- a/LeonardoDaVinci.html
+++ b/LeonardoDaVinci.html
@@ -8,6 +8,7 @@ Leonardo da Vinci
 <p>
 Painter, inventor, traveller. Leonardo was many things. He lived a good life, full of excitement and fun, but also stress and pressure. He had a major impact on the modern world! Why don’t we learn a bit more about him?
 </p>
+  <a href="LeonardosLife.html">Leonardo's Life</a>
 <p>
 <a href="index.html">Back to home page</a>
 </p>
