--- a/LeonardoDaVinci.html
+++ b/LeonardoDaVinci.html
@@ -9,7 +9,9 @@ Leonardo da Vinci
 Painter, inventor, traveller. Leonardo was many things. He lived a good life, full of excitement and fun, but also stress and pressure. He had a major impact on the modern world! Why don’t we learn a bit more about him?
 </p>
   <a href="LeonardosLife.html">Leonardo's Life</a>
-<p>
+  <br>
+  <a href="LeonardosImpact.html">Leonardo's Ideas and Impact</a>
+   <br>
 <a href="index.html">Back to home page</a>
 </p>
 </html>
