--- a/LeonardoDaVinci.html
+++ b/LeonardoDaVinci.html
@@ -8,6 +8,9 @@ Leonardo da Vinci
 <p>
 Painter, inventor, traveller. Leonardo was many things. He lived a good life, full of excitement and fun, but also stress and pressure. He had a major impact on the modern world! Why don’t we learn a bit more about him?
 </p>
+  <br>
+  <img src="https://www.mos.org/leonardo/sites/mos.org.leonardo/files/da_vinci_thumb.jpg">
+  <br>
   <a href="LeonardosLife.html">Leonardo's Life</a>
   <br>
   <a href="LeonardosImpact.html">Leonardo's Ideas and Impact</a>
