Added Burrito Bison

--- a/index.html
+++ b/index.html
@@ -14,4 +14,6 @@ Home Page
  <a href="StickyNinjaMissions.html">Sticky Ninja Missions</a>
  <br>
  <a href="FeedMeMoar.html">Feed Me Moar</a>
+<br>
+<a href="BurritoBison.html">Burrito Bison</a>
 </html>
