--- a/index.html
+++ b/index.html
@@ -18,4 +18,6 @@ Home Page
  <a href="FeedMeMoar.html">Feed Me Moar</a>
 <br>
 <a href="BurritoBison.html">Burrito Bison</a>
+<br>
+<a href="Poptropica.html">Poptropica</a>
 </html>
