--- a/index.html
+++ b/index.html
@@ -7,17 +7,5 @@ Home Page
 </h3>
  <a href="LeonardoDaVinci.html">Leonardo da Vinci</a>
  <br>
-<a href="PapaLouie.html">Papa Louie</a>
-<br>
-<a href="WingedBullet.html">Winged Bullet</a>
- <br>
- <a href="StickyNinja.html">Sticky Ninja</a>
-<br>
- <a href="StickyNinjaMissions.html">Sticky Ninja Missions</a>
- <br>
- <a href="FeedMeMoar.html">Feed Me Moar</a>
-<br>
-<a href="BurritoBison.html">Burrito Bison</a>
-<br>
-<a href="Poptropica.html">Poptropica</a>
+ <a href="Games.html">Games</a>
 </html>
