--- a/LeonardoDaVinci.html
+++ b/LeonardoDaVinci.html
@@ -15,6 +15,8 @@ Painter, inventor, traveller. Leonardo was many things. He lived a good life, fu
   <br>
   <a href="LeonardosImpact.html">Leonardo's Ideas and Impact</a>
    <br>
+  <a href="LeonardoQuiz.html">Leonardo da Vinci Quiz</a>
+  <br>
 <a href="index.html">Back to home page</a>
 </p>
 </html>
