--- a/LeonardosImpact.html
+++ b/LeonardosImpact.html
@@ -15,5 +15,7 @@ Leonardo's Ideas and Impact
   <br>
   <a href="LeonardoDaVinci.html">Back to Leonardo Home Page</a>
   <br>
+  <a href="LeonardoQuiz.html">Leonardo da Vinci Quiz</a>
+  <br>
 <a href="index.html">Back to home page</a>
 </html>
