--- a/LeonardosLife.html
+++ b/LeonardosLife.html
@@ -12,5 +12,7 @@ Leonardo was born in Italy, an illegitimate son. When he got older he invented i
   <br>
   <a href="LeonardoDaVinci.html">Back to Leonardo Home Page</a>
   <br>
+  <a href="LeonardoQuiz.html">Leonardo da Vinci Quiz</a>
+  <br>
 <a href="index.html">Back to home page</a>
 </html>
