--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -7,4 +7,8 @@
 Leonardo da Vinci Quiz
 </h3>
 </p>
-<button type="button" onclick="alert('Answer')">Question?</button>
+<button type="button" onclick="alert('Example Answer')">Example Question</button>
+<br>
+<button type="button" onclick="alert('')"></button>
+<br>
+<button type="button" onclick="alert('')"></button>
