--- a/LeonardosLife.html
+++ b/LeonardosLife.html
@@ -6,7 +6,7 @@
 Leonardo's Life
 </h3>
 <p>
-Leonardo was born in Italy, an illegitimate son. When he got older he invented ideas for things like bicycles, machine guns, and even helicopters! He was also an apprentice to Andrea del Verrocchio, and after that an assistant to him. Leonardo painted many great works like the mona lisa. He also wrote backward, so that other people wouldn’t steal his ideas.
+Leonardo was born in Italy. When he got older he invented ideas for things like bicycles, machine guns, and even helicopters! He was also an apprentice to Andrea del Verrocchio, and after that an assistant to him. Leonardo painted many great works like the mona lisa. He also wrote backward, so that other people wouldn’t steal his ideas.
 </p>
   <a href="LeonardosImpact.html">Leonardo's Ideas and Impact</a>
   <br>
