--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -33,7 +33,7 @@ Leonardo da Vinci Quiz
     </div>
 
 </li>
-<input type="submit" value="Submit Quiz" />
+    <input type="submit" value="Submit Quiz" />Submit</input>
     <?php
     
     $answer1 = $_POST['question-1-answers'];
