--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -33,7 +33,7 @@ Leonardo da Vinci Quiz
     </div>
 
 </li>
-    <input type="submit" value="Submit Quiz" />Submit</input>
+    <input type="submit" value="Submit Quiz" />
     <?php
     
     $answer1 = $_POST['question-1-answers'];
@@ -53,3 +53,4 @@ Leonardo da Vinci Quiz
     echo "<div id='results'>$totalCorrect / 5 correct</div>";
     
 ?>
+    </input>
