--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -47,3 +47,28 @@ Leonardo da Vinci Quiz
     
 ?>
     </input>
+<p class="question">1. Leonardo was born in...</p>
+
+<ul class="answers">
+
+<input type="radio" name="q1" value="a" id="q1a"><label for="q1a">The United States of America</label><br/>
+
+<input type="radio" name="q1" value="b" id="q1b"><label for="q1b">Italy</label><br/>
+
+<input type="radio" name="q1" value="c" id="q1c"><label for="q1c">France</label><br/>
+
+<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Mars</label><br/>
+
+</ul>
+
+<div id="results">
+
+The Right answers is
+
+</div>
+
+<div id="category1">
+
+<p><strong>Question 1:</strong> The correct answer is the <strong>Italy</strong>.</p>
+
+</div>
