--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -48,7 +48,7 @@ Leonardo da Vinci Quiz
     </input>
 <p class="question">1. Leonardo was born in...</p>
 
-<ul class="answers">#\
+<ul class="answers">
 
 <input type="radio" name="q1" value="a" id="q1a"><label for="q1a">The United States of America</label><br/>
 
