--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -71,3 +71,47 @@ The Right answers is
 <p><strong>Question 1:</strong> The correct answer is the <strong>Italy</strong>.</p>
 
 </div>
+<?php 
+
+$Questions = array(
+    1 => array(
+        'Question' => 'Leonardo was born in...',
+        'Answers' => array(
+            'A' => 'The United States of America',
+            'B' => 'Italy',
+            'C' => 'France'
+        ),
+        'CorrectAnswer' => 'B'
+    ),
+    2 => array(
+        'Question' => 'Second question',
+        'Answers' => array(
+            'A' => 'First answer of Second question',
+            'B' => 'Second answer Second question',
+            'C' => 'Third answer Second question'
+        ),
+        'CorrectAnswer' => 'C'
+    )
+);
+
+if (isset($_POST['answers'])){
+    $Answers = $_POST['answers']; // Get submitted answers.
+
+    // Now this is fun, automated question checking! ;)
+
+    foreach ($Questions as $QuestionNo => $Value){
+        // Echo the question
+        echo $Value['Question'].'<br />';
+
+        if ($Answers[$QuestionNo] != $Value['CorrectAnswer']){
+            echo '<span style="color: red;">'.$Value['Answers'][$Answers[$QuestionNo]].'</span>'; // Replace style with a class
+        } else {
+            echo '<span style="color: green;">'.$Value['Answers'][$Answers[$QuestionNo]].'</span>'; // Replace style with a class
+        }
+        echo '<br /><hr>';
+    }
+} else {
+?>
+    <form action="grade.php" method="post" id="quiz">
+    <?php foreach ($Questions as $QuestionNo => $Value){ ?>
+    <li>
