--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -7,6 +7,7 @@
 Leonardo da Vinci Quiz
 </h3>
 </p>
+<script>
 (function() {
   function buildQuiz() {
     // we'll need a place to store the HTML output
@@ -112,7 +113,7 @@ Leonardo da Vinci Quiz
   // on submit, show results
   submitButton.addEventListener("click", showResults);
 })();
-
+</script>
 
 
 <form action="grade.php" method="post" id="quiz">
