--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -114,7 +114,9 @@ Leonardo da Vinci Quiz
   submitButton.addEventListener("click", showResults);
 })();
 </script>
-
+<div id="quiz"></div>
+<button id="submit">Submit Quiz</button>
+<div id="results"></div>
 
 <form action="grade.php" method="post" id="quiz">
 <li>
