--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -118,6 +118,7 @@ Leonardo da Vinci Quiz
 <div id="quiz"></div>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
+<script>function buildQuiz()</scrpit>
 
 <form action="grade.php" method="post" id="quiz">
 <li>
