--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -115,7 +115,8 @@ Leonardo da Vinci Quiz
   submitButton.addEventListener("click", showResults);
 })();
 </script>
-<script>function buildQuiz()</scrpit>
+<script>function buildQuiz()
 <div id="quiz"></div>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
+</script>
