--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -115,8 +115,7 @@ Leonardo da Vinci Quiz
   submitButton.addEventListener("click", showResults);
 })();
 </script>
-<script>function buildQuiz()
+<script>buildQuiz()</script>
 <div id="quiz"></div>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
-</script>
