--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -118,4 +118,4 @@ Leonardo da Vinci Quiz
 <script>buildQuiz()</script>
 <div id="quiz"></div>
 <button id="submit">Submit Quiz</button>
-<div id="results"></div>
+<div id="results"></div>/
