--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -2,11 +2,9 @@
 <head>
 <title>Leonardo da Vinci Quiz</title>
 </head>
-<p>
 <h3>
 Leonardo da Vinci Quiz
 </h3>
-</p>
 <link rel="stylesheet" href="styles.css">
 <script>
 (function() {
@@ -118,4 +116,4 @@ Leonardo da Vinci Quiz
 <script>buildQuiz()</script>
 <div id="quiz"></div>
 <button id="submit">Submit Quiz</button>
-<div id="results"></div>/
+<div id="results"></div>
