--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Leonardo da Vinci Quiz</title>
-<script src="quiz.html" />
+<script src="quiz.js" />
 </head>
 <h3>
 Leonardo da Vinci Quiz
