--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -1,7 +1,6 @@
 <html>
 <head>
 <title>Leonardo da Vinci Quiz</title>
-  <script src="quiz.js" ></script>
 </head>
 <h3>
 Leonardo da Vinci Quiz
@@ -10,3 +9,5 @@ Leonardo da Vinci Quiz
 <div id="quiz"></div>
 <div id="results"></div>
 <button id="submit">Submit Quiz</button>
+<script src="quiz.js" ></script>
+</html>
