--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -11,3 +11,6 @@ Leonardo da Vinci Quiz
 <button id="submit">Submit Quiz</button>
 <script src="quiz.js" ></script>
 </html>
+<a href="LeonardoDaVinci.html">Back to Leonardo Home Page</a>
+<a href="LeonardosImpact.html">Leonardo's Ideas and Impact</a>
+<a href="LeonardosLife.html">Leonardo's Life</a>
