--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -12,5 +12,9 @@ Leonardo da Vinci Quiz
 <script src="quiz.js" ></script>
 </html>
 <a href="LeonardoDaVinci.html">Back to Leonardo Home Page</a>
+<br>
 <a href="LeonardosImpact.html">Leonardo's Ideas and Impact</a>
+<br>
 <a href="LeonardosLife.html">Leonardo's Life</a>
+<br>
+<a href="index.html">Back to home page</a>
