--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@ Home Page
  <br>
  <a href="geekprank.com/hacker">Hacker Prank</a>
  <br>
- <a href="geekprank.com/cracked-screen>Cracked Screen Prank</a>
+ <a href="geekprank.com/cracked-screen">Cracked Screen Prank</a>
 </html>
