--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Home Page
  <br>
  <a href="Games.html">Games</a>
  <br>
- <a href="geekprank.com/hacker">Hacker Prank</a>
+ <a href="https://geekprank.com/hacker">Hacker Prank</a>
  <br>
- <a href="geekprank.com/cracked-screen">Cracked Screen Prank</a>
+ <a href="https://geekprank.com/cracked-screen">Cracked Screen Prank</a>
 </html>
