--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Home Page
  <br>
  <a href="Games.html">Games</a>
  <br>
- <a href="https://geekprank.com/hacker">Hacker Prank</a>
+ Go to geekprank.com/hacker for a hacker prank
  <br>
- <a href="https://geekprank.com/cracked-screen">Cracked Screen Prank</a>
+ Go to geekprank.com/cracked-screen for a cracked screen prank
 </html>
