--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@ Home Page
  Go to geekprank.com/hacker for a hacker prank
  <br>
  Go to geekprank.com/cracked-screen for a cracked screen prank
+ <br>
+ I cannot link these because github doesn't allow links to external pages for some reason. Please let me know if there is a way around this.
 </html>
