--- a/Music.html
+++ b/Music.html
@@ -4,7 +4,7 @@
 </head>
 Some Music
 <br>
-<audio preload="auto" autobuffer>
+<audio controls autoplay>
   <source src="Epic-8bit.wav" type="audio/wav">
 </audio>
 </head>
