--- a/Music.html
+++ b/Music.html
@@ -7,4 +7,6 @@ Some Music
 <audio controls autoplay>
   <source src="Epic-8bit.wav" type="audio/wav">
 </audio>
-</head>
+<br>
+If the 3 dots on the side do not appear, refresh the page until it does.
+</html>
