--- a/Music.html
+++ b/Music.html
@@ -2,7 +2,7 @@
 <head>
 <title>Some Music</title>
 </head>
-Congration on getting to the secret page! here is some music.
+Congration on getting to the secret page! Here is some music.
 <br>
 <audio controls autoplay>
   <source src="Epic-8bit.wav" type="audio/wav">
