--- a/index.html
+++ b/index.html
@@ -14,4 +14,8 @@ Home Page
  Go to geekprank.com/cracked-screen/ for a cracked screen prank
  <br>
  I cannot link these because github doesn't allow links to external pages for some reason. Please let me know if there is a way around this.
+<br>
+<h3>
+HI GRANDMA!!!!!!
+</h3>
 </html>
