--- a/Games.html
+++ b/Games.html
@@ -20,4 +20,6 @@ Games
 <a href="BurritoBison.html">Burrito Bison</a>
 <br>
 <a href="Poptropica.html">Poptropica</a>
+<br>
+<a hrf="Wheely7.html">Wheely 7</a>
 </html>
