--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ Home Page
  <br>
  <a href="Games.html">Games</a>
  <br>
+ <a href="Musicplaylist.html">Music</a>
+ <br>
  Go to geekprank.com/hacker/ for a hacker prank
   <br>
  Go to geekprank.com/cracked-screen/ for a cracked screen prank
