--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Home Page
  <br>
  <a href="Games.html">Games</a>
  <br>
- <a href="Musicplaylist.html">Music</a>
+ <a href="MusicPlaylist.html">Music</a>
  <br>
  Go to geekprank.com/hacker/ for a hacker prank
   <br>
