--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ Home Page
  <br>
  <a href="MusicPlaylist.html">Music</a>
  <br>
+ <a href="Memes.html">Memes</a>
+ <br>
  Go to geekprank.com/hacker/ for a hacker prank
   <br>
  Go to geekprank.com/cracked-screen/ for a cracked screen prank
