--- a/Memes.html
+++ b/Memes.html
@@ -8,3 +8,6 @@ Memes
 </h3>
 </p>
 <img src="gru.jpg" alt="Sorry, this meme can't appear on this browser/device.">
+<br>
+<a href="index.html">Back to home page</a>
+</html>
