--- a/Memes.html
+++ b/Memes.html
@@ -9,5 +9,7 @@ Memes
 </p>
 <img src="gru.jpg" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
+<img src="chair.jpg" alt="Sorry, this meme can't appear on this browser/device.">
+<br>
 <a href="index.html">Back to home page</a>
 </html>
