--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <title>Home Page</title>
 </head>
 <h3>
-Home Page
+Puzzle Dude98's Wonderful site
 </h3>
+ <p><i>Where content is our priority, not looks!</i></p>
  <a href="LeonardoDaVinci.html">Leonardo da Vinci</a>
  <br>
  <a href="Games.html">Games</a>
