--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Home Page</title>
 </head>
 <h3>
-Puzzle Dude98's Wonderful site
+Puzzle Dude98's Wonderful Site
 </h3>
  <p><i>Where content is our priority, not looks!</i></p>
  <a href="LeonardoDaVinci.html">Leonardo da Vinci</a>
