--- a/Games.html
+++ b/Games.html
@@ -21,5 +21,5 @@ Games
 <br>
 <a href="Poptropica.html">Poptropica</a>
 <br>
-<a hrf="Wheely7.html">Wheely 7</a>
+<a href="Wheely7.html">Wheely 7</a>
 </html>
