--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ Puzzle Dude98's Wonderful Site
  <br>
  <a href="Memes.html">Memes</a>
  <br>
+ <a href="Suggestions.html">Suggestions</a>
+ <br>
  Go to geekprank.com/hacker/ for a hacker prank
   <br>
  Go to geekprank.com/cracked-screen/ for a cracked screen prank
