--- a/Suggestions.html
+++ b/Suggestions.html
@@ -1,5 +1,7 @@
  <html>
+  
         <head>
+         <title>Suggestion Box</title>
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 
         <script>
@@ -14,6 +16,8 @@ $("#formcontainer").html(data);
         </script>
         </head>
         <body>
+         <h3>Suggestion/Comments</h3>
+         <br>
         <div id="formcontainer">
         <form id="form1" name="form1" method="post" action="">
             <label>
