--- a/Suggestions.html
+++ b/Suggestions.html
@@ -16,7 +16,7 @@ $("#formcontainer").html(data);
         </script>
         </head>
         <body>
-         <h3>Suggestion/Comments</h3>
+         <h3>Suggestions/Comments</h3>
          <br>
         <div id="formcontainer">
         <form id="form1" name="form1" method="post" action="">
