--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Puzzle Dude98's Wonderful Site
  <br>
  <a href="Memes.html">Memes</a>
  <br>
- <a href="Suggestions.html">Suggestions</a>
+ <a href="Suggestions.html">Suggestions and Comments</a>
  <br>
  Go to geekprank.com/hacker/ for a hacker prank
   <br>
