--- a/Memes.html
+++ b/Memes.html
@@ -11,5 +11,7 @@ Memes
 <br>
 <img src="chair.jpg" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
+<img src="spoon.jpg" alt="Sorry, this meme can't appear on this browser/device.">
+<br>
 <a href="index.html">Back to home page</a>
 </html>
