--- a/Memes.html
+++ b/Memes.html
@@ -13,5 +13,7 @@ Memes
 <br>
 <img src="spoon.jpg" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
+<img src="image.png" alt="Sorry, this meme can't appear on this browser/device.">
+<br>
 <a href="index.html">Back to home page</a>
 </html>
