--- a/Suggestions.html
+++ b/Suggestions.html
@@ -17,6 +17,7 @@ $("#formcontainer").html(data);
         </head>
         <body>
          <h3>Suggestions/Comments</h3>
+	<h2><i>Does not work yet. Sorry!</i></h2>
          <br>
         <div id="formcontainer">
         <form id="form1" name="form1" method="post" action="">
