--- a/Memes.html
+++ b/Memes.html
@@ -15,7 +15,7 @@ Memes
 <br>
 <img src="image.png" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
-<img src="wonka.jpeg" alt="Sorry, this meme can't appear on this browser/device.">
+<img src="wonka.jpeg" alt="Sorry, this meme can't appear on this browser/device." height="42" width="42">
 <br>
 <a href="index.html">Back to home page</a>
 </html>
