--- a/Memes.html
+++ b/Memes.html
@@ -16,5 +16,13 @@ Memes
 <img src="wonka.jpeg" alt="Sorry, this meme can't appear on this browser/device." height="400" width="480">
 <img src="titanic.jpg" alt="Sorry, this meme can't appear on this browser/device." height="400" width="550">
 <br>
+<fieldset>
+  <legend>Some long winded yes or no question?</legend>
+  <input type="radio" name="the_question" id="the_question_yes" value="1">
+  <label for="the_question_yes" class="after_radio">Yes</label>
+  <input type="radio" name="the_question" id="the_question_no" value="0">
+  <label for="the_question_no" class="after_radio">No</label>
+</fieldset>
+<br>
 <a href="index.html">Back to home page</a>
 </html>
