--- a/Memes.html
+++ b/Memes.html
@@ -17,11 +17,11 @@ Memes
 <img src="titanic.jpg" alt="Sorry, this meme can't appear on this browser/device." height="400" width="550">
 <br>
 <fieldset>
-  <legend>Some long winded yes or no question?</legend>
+  <legend>Do you like this new meme style?</legend>
   <input type="radio" name="the_question" id="the_question_yes" value="1">
-  <label for="the_question_yes" class="after_radio">Yes</label>
+  <label for="the_question_yes" class="after_radio">Yes, quite nice.</label>
   <input type="radio" name="the_question" id="the_question_no" value="0">
-  <label for="the_question_no" class="after_radio">No</label>
+  <label for="the_question_no" class="after_radio">No, go back to the old one</label>
 </fieldset>
 <br>
 <a href="index.html">Back to home page</a>
