--- a/Memes.html
+++ b/Memes.html
@@ -16,13 +16,11 @@ Memes
 <img src="wonka.jpeg" alt="Sorry, this meme can't appear on this browser/device." height="400" width="480">
 <img src="titanic.jpg" alt="Sorry, this meme can't appear on this browser/device." height="400" width="550">
 <br>
-<fieldset>
   <legend>Do you like this new meme style?</legend>
-  <input type="radio" name="the_question" id="the_question_yes" value="1">
-  <label for="the_question_yes" class="after_radio">Yes, quite nice.</label>
-  <input type="radio" name="the_question" id="the_question_no" value="0">
-  <label for="the_question_no" class="after_radio">No, go back to the old one</label>
-</fieldset>
+  <label for="the_question">Yes, quite nice.</label>
+<input type="checkbox" name="the_question" id="the_question" value="1">
+<label for="the_question">No, go back to the old style..</label>
+<input type="checkbox" name="the_question" id="the_question" value="0">
 <br>
 <a href="index.html">Back to home page</a>
 </html>
