--- a/Memes.html
+++ b/Memes.html
@@ -16,11 +16,11 @@ Memes
 <img src="wonka.jpeg" alt="Sorry, this meme can't appear on this browser/device." height="400" width="480">
 <img src="titanic.jpg" alt="Sorry, this meme can't appear on this browser/device." height="400" width="550">
 <br>
-  <legend>Do you like this new meme style?</legend>
-  <label for="the_question">Yes, quite nice.</label>
-<input type="checkbox" name="the_question" id="the_question" value="1">
-<label for="the_question">No, go back to the old style..</label>
-<input type="checkbox" name="the_question" id="the_question" value="0">
-<br>
+  <!<legend><!Do you like this new meme style?</legend>
+  <!<label for="the_question"><!Yes, quite nice.</label>
+<!<input type="checkbox" name="the_question" id="the_question" value="1">
+<!<label for="the_question"><!No, go back to the old style..</label>
+<!<input type="checkbox" name="the_question" id="the_question" value="0">
+<!<br>
 <a href="index.html">Back to home page</a>
 </html>
