--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@ Puzzle Dude98's Wonderful Site
   <br>
  Go to geekprank.com/cracked-screen/ for a cracked screen prank
  <br>
- I cannot link these because github doesn't allow links to external pages for some reason. Please let me know if there is a way around this.
+ I cannot link these because github pages doesn't allow links to external pages for some reason. Please let me know if there is a way around this.
 </html>
