--- a/index.html
+++ b/index.html
@@ -21,4 +21,7 @@ Puzzle Dude98's Wonderful Site
  Go to geekprank.com/cracked-screen/ for a cracked screen prank
  <br>
  I cannot link these because github pages doesn't allow links to external pages for some reason. Please let me know if there is a way around this.
+<br>
+ <br>
+ <h2><i>Please e-mail all suggestions to puzzledude98@outlook.com</i></h2>
 </html>
