--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>
 Puzzle Dude98's Wonderful Site
 </h1>
- <p><i>Where content is our priority, not looks!</i></p>
+ <p><h2><i>Where content is our priority, not looks!</i></h2></p>
  <a href="LeonardoDaVinci.html">Leonardo da Vinci</a>
  <br>
  <a href="Games.html">Games</a>
@@ -23,5 +23,5 @@ Puzzle Dude98's Wonderful Site
  I cannot link these because github pages doesn't allow links to external pages for some reason. Please let me know if there is a way around this.
 <br>
  <br>
- <h2><i>Please e-mail all suggestions to puzzledude98@outlook.com</i></h2>
+ <h3><i>Please e-mail all suggestions to puzzledude98@outlook.com</i></h3>
 </html>
