--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@ Puzzle Dude98's Wonderful Site
  I cannot link these because github pages doesn't allow links to external pages for some reason. Please let me know if there is a way around this.
 <br>
  <br>
- <h3><i>Please e-mail all suggestions to puzzledude98@outlook.com</i></h3>
+ <h3><i>Please e-mail all suggestions and comments to puzzledude98@outlook.com</i></h3>
 </html>
