--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@ Puzzle Dude98's Wonderful Site
  <br>
  <!<a href="Suggestions.html"><!Suggestions and Comments</a>
  <!<br>
- Go to geekprank.com/hacker/ for a hacker prank
+ <a href="http://www.geekprank.com/hacker/">Hacker Prank</a>
   <br>
- Go to geekprank.com/cracked-screen/ for a cracked screen prank
- <br>
- I cannot link these because github pages doesn't allow links to external pages for some reason. Please let me know if there is a way around this.
-<br>
+  <a href="http://www.geekprank.com/cracked-screen/">Cracked Screen Prank</a>
  <br>
  <h3><i>Please e-mail all suggestions and comments to puzzledude98@outlook.com</i></h3>
 </html>
