--- a/ScratchSaga.html
+++ b/ScratchSaga.html
@@ -1,1 +1,25 @@
+<html>
+<head>
+<title>Scratch Saga</title>
+</head>
+<p>
+<h2>
+Scratch Saga
+</h2>
+</p>
+<h3>
+  Part 1
+</h3>
+<br>
 <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/224319636/?autostart=true" frameborder="0" allowfullscreen></iframe>
+<br>
+<h3>
+  Part 2
+</h3>
+<br>    
+<iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/230402884/?autostart=true" frameborder="0" allowfullscreen></iframe>
+<br>
+<h3>
+  Part 3 coming soon
+</h3>
+<br>
