--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Puzzle Dude98's Wonderful Site
  <br>
  <!<a href="Suggestions.html"><!Suggestions and Comments</a>
  <!<br>
+<a href="ScratchSaga.html">Scratch Saga</a> (Visit <a href="http://www.scratch.mit.edu">scratch</a> to get familiar with it first)
  <a href="http://www.geekprank.com/hacker/">Hacker Prank</a>
   <br>
   <a href="http://www.geekprank.com/cracked-screen/">Cracked Screen Prank</a>
