--- a/ScratchSaga.html
+++ b/ScratchSaga.html
@@ -20,6 +20,8 @@ Scratch Saga
 <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/230402884/?autostart=true" frameborder="0" allowfullscreen></iframe>
 <br>
 <h3>
-  Part 3 coming soon
+  Part 3 Trailer(Actual thing coming out 14-07-2019)
 </h3>
 <br>
+<iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/306115051/?autostart=true" frameborder="0" allowfullscreen></iframe>
+</html>
