--- a/Jokes.html
+++ b/Jokes.html
@@ -1,2 +1,22 @@
 <html>
-<button onclick="myFunction()">Try it</button>
+<head>
+<title>Jokes</title>
+</head>
+<p>
+<h2>
+Jokes
+</h2>
+</p>
+<br>
+<h3>Got jokes you want to see on here? E-mail them to puzzledude98@outlook.com!</h3>
+<br>
+The buttons read jokes, and clicking on them pops up a punchline!
+<button onclick=alert("Example punchline")>Example joke</button>
+<br>
+------------------------------------------------------------------------
+<br>
+<button onclick=alert("That's a salt!")>My teacher threw some sodium chloride at me.</button>
+<br>
+<button onclick=alert("Makes one weak(Yes I know it's pretty bad")>Seven days without a pun...</button>
+<!--<br>
+<button onclick=alert("PLine")>Joke</button>-->
