--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@ Puzzle Dude98's Wonderful Site
  <br>
  <a href="Memes.html">Memes</a>
  <br>
- <!<a href="Suggestions.html"><!Suggestions and Comments</a>
- <!<br>
+<a href="Jokes.html">Jokes</a>
+<br>
+ <!--<a href="Suggestions.html"><!Suggestions and Comments</a>
+ <br>-->
 <a href="ScratchSaga.html">Scratch Saga</a> (Visit <a href="http://www.scratch.mit.edu">scratch</a> to get familiar with it first)
 <br> 
 <a href="http://www.geekprank.com/hacker/">Hacker Prank</a>
