--- a/Jokes.html
+++ b/Jokes.html
@@ -11,12 +11,12 @@ Jokes
 <h3>Got jokes you want to see on here? E-mail them to puzzledude98@outlook.com!</h3>
 <br>
 The buttons read jokes, and clicking on them pops up a punchline!
-<button onclick="alert("Example punchline");">Example joke</button>
+<button onclick=alert('Example punchline');>Example joke</button>
 <br>
 ------------------------------------------------------------------------
 <br>
-<button onclick="alert('That's a salt!');">My teacher threw some sodium chloride at me.</button>
+<button onclick=alert('That's a salt!');>My teacher threw some sodium chloride at me.</button>
 <br>
-<button onclick="alert('Makes one weak');">Seven days without a pun...</button>
+<button onclick=alert('Makes one weak');>Seven days without a pun...</button>
 <!--<br>
-<button onclick=alert"('PLine');">Joke</button>-->
+<button onclick=alert('PLine');>Joke</button>-->
