--- a/Jokes.html
+++ b/Jokes.html
@@ -18,5 +18,9 @@ The buttons read jokes, and clicking on them pops up a punchline!
 <button onclick="alert('Thats a salt!');">My teacher threw some sodium chloride at me.</button>
 <br>
 <button onclick="alert('Makes one weak');">Seven days without a pun...</button>
+<br>
+<button onclick="alert('A candy baa');">What do you call a sheep covered in chocolate?</button>
+<br>
+<button onclick="alert('Ba dum tsss!');">A lamb, a drum, and a snake fall off a cliff.</button>
 <!--<br>
-<button onclick=alert('PLine');>Joke</button>-->
+<button onclick="alert('PLine');">Joke</button>-->
