--- a/Jokes.html
+++ b/Jokes.html
@@ -22,5 +22,7 @@ The buttons read jokes, and clicking on them pops up a punchline!
 <button onclick="alert('A candy baa');">What do you call a sheep covered in chocolate?</button>
 <br>
 <button onclick="alert('Ba dum tsss!');">A lamb, a drum, and a snake fall off a cliff.</button>
+<br>
+<button onclick="alert('Carlos');">What do you call a Mexican who lost his car?</button>
 <!--<br>
 <button onclick="alert('PLine');">Joke</button>-->
