--- a/Jokes.html
+++ b/Jokes.html
@@ -24,5 +24,7 @@ The buttons read jokes, and clicking on them pops up a punchline!
 <button onclick="alert('Ba dum tsss!');">A lamb, a drum, and a snake fall off a cliff.</button>
 <br>
 <button onclick="alert('Carlos');">What do you call a Mexican who lost his car?</button>
+<br>
+<button onclick="alert('A USB');">What do you call a bee that lives in America?</button>
 <!--<br>
 <button onclick="alert('PLine');">Joke</button>-->
