--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html>
+ <script>
+function myFunction() {
+  var x = Math.floor((Math.random() * 10) + 1);
+  document.getElementById("demo").innerHTML = x;
+}
+if (var x < 18) {
+ </script>
 <head>
 <title>Home Page</title>
 </head>
@@ -25,4 +32,6 @@ Puzzle Dude98's Wonderful Site
   <a href="http://www.geekprank.com/cracked-screen/">Cracked Screen Prank</a>
  <br>
  <h3><i>Please e-mail all suggestions and comments to puzzledude98@outlook.com</i></h3>
+<script>
+ 
 </html>
