--- a/index.html
+++ b/index.html
@@ -34,4 +34,7 @@ Puzzle Dude98's Wonderful Site
  <h3><i>Please e-mail all suggestions and comments to puzzledude98@outlook.com</i></h3>
 <script>
  }
+ else {
+    Troll message;
+  }
 </html>
