--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 Puzzle Dude98's Wonderful Site
 </h1>
  <p><h2><i>Where content is our priority, not looks!</i></h2></p>
- <a href="LeonardoDaVinci.html">Leonardo da Vinci</a>
+ <button onclick="window.location.href = 'LeonardoDaVinci.html';">Leonardo da Vinci</button>
  <br>
  <a href="Games.html">Games</a>
  <br>
