--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ Puzzle Dude98's Wonderful Site
  <br>
  <a href="Games.html">Games</a>
  <br>
- <a href="MusicPlaylist.html">Music</a>
+ <button onclick="window.location.href = 'MusicPlaylist.html';">Music</button>
  <br>
- <a href="Memes.html">Memes</a>
+ <button onclick="window.location.href = 'Memes.html';">Memes</button>
  <br>
 <a href="Jokes.html">Jokes</a>
 <br>
@@ -25,4 +25,6 @@ Puzzle Dude98's Wonderful Site
   <a href="http://www.geekprank.com/cracked-screen/">Cracked Screen Prank</a>
  <br>
  <h3><i>Please e-mail all suggestions and comments to puzzledude98@outlook.com</i></h3>
+<br>
+We are changing from links to buttons that link and replacing all of them may take a while, expect inconsistencies.
 </html>
