--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@ Puzzle Dude98's Wonderful Site
  <p><h2><i>Where content is our priority, not looks!</i></h2></p>
  <button onclick="window.location.href = 'LeonardoDaVinci.html';">Leonardo da Vinci</button>
  <br>
- <a href="Games.html">Games</a>
+ <button onclick="window.location.href = 'Games.html';">Games</button>
  <br>
  <button onclick="window.location.href = 'MusicPlaylist.html';">Music</button>
  <br>
  <button onclick="window.location.href = 'Memes.html';">Memes</button>
  <br>
-<a href="Jokes.html">Jokes</a>
+<button onclick="window.location.href = 'Jokes.html';">Jokes</button>
 <br>
  <!--<a href="Suggestions.html"><!Suggestions and Comments</a>
  <br>-->
-<a href="ScratchSaga.html">Scratch Saga</a> (Visit <a href="http://www.scratch.mit.edu">scratch</a> to get familiar with it first)
+<button onclick="window.location.href = 'ScratchSaga.html';">Scratch Saga</button> (Visit <a href="http://www.scratch.mit.edu">scratch</a> to get familiar with it first)
 <br> 
-<a href="http://www.geekprank.com/hacker/">Hacker Prank</a>
+<button onclick="window.location.href = 'http://www.geekprank.com/hacker/';">Hacker Prank</button>
   <br>
-  <a href="http://www.geekprank.com/cracked-screen/">Cracked Screen Prank</a>
+  <a href=""></a><button onclick="window.location.href = 'http://www.geekprank.com/cracked-screen/';">Cracked Screen Prank</button>
  <br>
  <h3><i>Please e-mail all suggestions and comments to puzzledude98@outlook.com</i></h3>
 <br>
