--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Puzzle Dude98's Wonderful Site
 <br> 
 <button onclick="window.location.href = 'http://www.geekprank.com/hacker/';">Hacker Prank</button>
   <br>
-  <a href=""></a><button onclick="window.location.href = 'http://www.geekprank.com/cracked-screen/';">Cracked Screen Prank</button>
+  <button onclick="window.location.href = 'http://www.geekprank.com/cracked-screen/';">Cracked Screen Prank</button>
  <br>
  <h3><i>Please e-mail all suggestions and comments to puzzledude98@outlook.com</i></h3>
 <br>
