--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -11,7 +11,7 @@ Leonardo da Vinci Quiz
 <button id="submit">Submit Quiz</button>
 <script src="quiz.js" ></script>
 <br>
-<a href="LeonardoDaVinci.html">Back to Leonardo Home Page</a>
+<button onclick="window.location.href = 'LeonardoDaVinci.html';">Back to Leonardo Home Page</button>
 <br>
 <a href="LeonardosImpact.html">Leonardo's Ideas and Impact</a>
 <br>
