--- a/LeonardosImpact.html
+++ b/LeonardosImpact.html
@@ -11,8 +11,7 @@ Leonardo's Ideas and Impact
 <p>
   He has a huge impact on the modern world! His designs helped invent lots of things, like bicycles and airplanes! His paintings are admired all across the globe. He even inspired other artists like michelangelo who also have a huge impact on the world!
  <br>
-  
-  <a href="LeonardoDaVinci.html">Back to Leonardo Home Page</a>
+  <button onclick="window.location.href = 'LeonardoDaVinci.html';">Back to Leonardo Home Page</button>
   <br>
   <a href="LeonardosLife.html">Leonardo's Life</a>
   <br>
