--- a/LeonardosLife.html
+++ b/LeonardosLife.html
@@ -8,7 +8,7 @@ Leonardo's Life
 <p>
 Leonardo was born in Italy. When he got older he invented ideas for things like bicycles, machine guns, and even helicopters! He was also an apprentice to Andrea del Verrocchio, and after that an assistant to him. Leonardo painted many great works like the mona lisa. He also wrote backward, so that other people wouldn’t steal his ideas.
 </p>
-    <a href="LeonardoDaVinci.html">Back to Leonardo Home Page</a>  <br>
+    <button onclick="window.location.href = 'LeonardoDaVinci.html';">Back to Leonardo Home Page</button>
   <br>
   <a href="LeonardosImpact.html">Leonardo's Ideas and Impact</a>
 <br>
