--- a/LeonardosLife.html
+++ b/LeonardosLife.html
@@ -14,5 +14,5 @@ Leonardo was born in Italy. When he got older he invented ideas for things like 
 <br>
   <a href="LeonardoQuiz.html">Leonardo da Vinci Quiz</a>
   <br>
-<a href="index.html">Back to home page</a>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
