--- a/LeonardosImpact.html
+++ b/LeonardosImpact.html
@@ -17,5 +17,5 @@ Leonardo's Ideas and Impact
   <br>
   <a href="LeonardoQuiz.html">Leonardo da Vinci Quiz</a>
   <br>
-<a href="index.html">Back to home page</a>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
