--- a/LeonardoQuiz.html
+++ b/LeonardoQuiz.html
@@ -17,5 +17,5 @@ Leonardo da Vinci Quiz
 <br>
 <a href="LeonardosLife.html">Leonardo's Life</a>
 <br>
-<a href="index.html">Back to home page</a>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
