--- a/Games.html
+++ b/Games.html
@@ -22,4 +22,6 @@ Games
 <a href="Poptropica.html">Poptropica</a>
 <br>
 <a href="Wheely7.html">Wheely 7</a>
+<br>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
