--- a/Jokes.html
+++ b/Jokes.html
@@ -28,3 +28,5 @@ The buttons read jokes, and clicking on them pops up a punchline!
 <button onclick="alert('A USB');">What do you call a bee that lives in America?</button>
 <!--<br>
 <button onclick="alert('PLine');">Joke</button>-->
+<br><br>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
