--- a/LeonardoDaVinci.html
+++ b/LeonardoDaVinci.html
@@ -17,6 +17,6 @@ Painter, inventor, traveller. Leonardo was many things. He lived a good life, fu
    <br>
   <a href="LeonardoQuiz.html">Leonardo da Vinci Quiz</a>
   <br>
-<a href="index.html">Back to home page</a>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </p>
 </html>
