--- a/Memes.html
+++ b/Memes.html
@@ -27,5 +27,5 @@ Memes
 <!<label for="the_question"><!No, go back to the old style..</label>
 <!<input type="checkbox" name="the_question" id="the_question" value="0">
 <!<br>
-<a href="index.html">Back to home page</a>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
