--- a/Music.html
+++ b/Music.html
@@ -9,4 +9,6 @@ Congration on getting to the secret page! Here is some music.
 </audio>
 <br>
 If the 3 dots on the side do not appear, refresh the page until it does.
+<br>
+  <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
