--- a/PapaLouie.html
+++ b/PapaLouie.html
@@ -9,6 +9,6 @@ Papa Louie
 <embed width=1100 height=800 src="papalouie/papalouie_v2.swf">
 </p>
 <p>
-<a href="index.html">Back to home page</a>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </p>
 </html>
