--- a/Games.html
+++ b/Games.html
@@ -19,8 +19,8 @@ Games
 <br>
 <a href="BurritoBison.html">Burrito Bison</a>
 <br>
-<a href="Poptropica.html">Poptropica</a>
-<br>
+<!--<a href="Poptropica.html">Poptropica</a>
+<br>-->
 <a href="Wheely7.html">Wheely 7</a>
 <br>
 <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
