--- a/ScratchSaga.html
+++ b/ScratchSaga.html
@@ -24,4 +24,6 @@ Scratch Saga
 </h3>
 <br>
 <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/306115051/?autostart=true" frameborder="0" allowfullscreen></iframe>
+<br>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
