--- a/StickyNinja.html
+++ b/StickyNinja.html
@@ -9,4 +9,5 @@ Sticky Ninja
 </p>
 <br>
 <embed width="750" height="500" base="https://external.kongregate-games.com/gamez/0012/8734/live/" src="https://external.kongregate-games.com/gamez/0012/8734/live/embeddable_128734.swf" type="application/x-shockwave-flash"></embed>
-<a href="index.html>Back to home page</a>
+<br>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
