--- a/StickyNinjaMissions.html
+++ b/StickyNinjaMissions.html
@@ -10,4 +10,4 @@ Sticky Ninja Missions
 <br>
 <embed width="800" height="512" base="https://external.kongregate-games.com/gamez/0021/0593/live/" src="https://external.kongregate-games.com/gamez/0021/0593/live/embeddable_210593.swf" type="application/x-shockwave-flash"></embed>
 <br>
-<a href="index.html>Back to home page</a>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
