--- a/Wheely7.html
+++ b/Wheely7.html
@@ -8,4 +8,5 @@ Wheely 7
 <br>
 <embed width="100%" height="100%" src="http://www.pegasgames.com/games/Wheely7.swf" type="application/x-shockwave-flash" fullscreen="yes">
 <br>
-<a href="index.html">Back to home page</a>
+<button onclick="window.location.href = 'index.html';">Back to Home Page</button>]
+</html>
