--- a/Games.html
+++ b/Games.html
@@ -7,13 +7,13 @@
 Games
 </h3>
 </p>
-<a href="PapaLouie.html">Papa Louie</a>
+<button onclick="window.location.href = 'PapaLouie.html';">Papa Louie</button>
 <br>
-<a href="WingedBullet.html">Winged Bullet</a>
+<button onclick="window.location.href = 'WingedBullet.html';">Winged Bullet</button>
  <br>
- <a href="StickyNinja.html">Sticky Ninja</a>
+ <a href=""></a><button onclick="window.location.href = 'StickyNinja.html';">Sticky Ninja</button>
 <br>
- <a href="StickyNinjaMissions.html">Sticky Ninja Missions</a>
+ <a href=""></a><button onclick="window.location.href = 'StickyNinjaMissions.html';">Sticky Ninja Missions</button>
  <br>
  <a href="FeedMeMoar.html">Feed Me Moar</a>
 <br>
