--- a/Games.html
+++ b/Games.html
@@ -11,17 +11,17 @@ Games
 <br>
 <button onclick="window.location.href = 'WingedBullet.html';">Winged Bullet</button>
  <br>
- <a href=""></a><button onclick="window.location.href = 'StickyNinja.html';">Sticky Ninja</button>
+ <button onclick="window.location.href = 'StickyNinja.html';">Sticky Ninja</button>
 <br>
- <a href=""></a><button onclick="window.location.href = 'StickyNinjaMissions.html';">Sticky Ninja Missions</button>
+ <button onclick="window.location.href = 'StickyNinjaMissions.html';">Sticky Ninja Missions</button>
  <br>
- <a href="FeedMeMoar.html">Feed Me Moar</a>
+ <button onclick="window.location.href = 'FeedMeMoar.html';">Feed Me Moar</button>
 <br>
-<a href="BurritoBison.html">Burrito Bison</a>
+<button onclick="window.location.href = 'BurritoBison.html';">Burrito Bison</button>
 <br>
 <!--<a href="Poptropica.html">Poptropica</a>
 <br>-->
-<a href="Wheely7.html">Wheely 7</a>
+<button onclick="window.location.href = 'Wheely7.html';">Wheely 7</button>
 <br>
 <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
