--- a/TrollMessage.html
+++ b/TrollMessage.html
@@ -2,5 +2,8 @@
 <h1>YOU DONE BEEN TROLLED!!!</h1>
 <br>
 You have been randomly selected to get this page instead of the home page!
+  <br>
 <img src="Monkey.gif" alt="Sorry, this meme can't appear on this browser/device." height="400" width="650">
-<embed src="blue.mp3" autostart="true">
+  <br>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/68ugkg9RePc?autoplay=1&loop=1&playlist=GRonxog5mbw" frameborder="0" allowfullscreen></iframe>
+  </html>
