--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <title>Home Page</title>
+ <!--<script>
+ window.location = "http://www.htmlcodes.ws/"
+  </script-->
 </head>
 <h1>
 Puzzle Dude98's Wonderful Site
