--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
 <head>
 <title>Home Page</title>
- <!--<script>
- window.location = "http://www.htmlcodes.ws/"
-  </script-->
+ <script>
+var myMake = [0,1];
+
+var x = Math.floor(Math.random() * 1 + 1);
+if (x < 1) {
+  window.location = "TrollMessage.html/";
+} else
+ </script>
 </head>
 <h1>
 Puzzle Dude98's Wonderful Site
