--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <head>
 <title>Home Page</title>
  <script>
-var myMake = [0,1];
-
-var x = Math.floor(Math.random() * 1 + 1);
+var chance = Math.random()*0+1;
 if (x = 1) {
   window.location = "TrollMessage.html/";
 } else
