--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Home Page</title>
  <script>
-var chance = Math.random()*0+1;
+var x = Math.random()*0+1;
 if (x = 1) {
   window.location = "TrollMessage.html/";
 } else
