--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <script>
 var x = Math.random()*1+1;
 if (x = 1) {
-  window.location = "TrollMessage.html/";
+  window.location = "TrollMessage.html";
 }
  </script>
 </head>
