--- a/TrollMessage.html
+++ b/TrollMessage.html
@@ -7,4 +7,5 @@ You have been randomly selected to get this page instead of the home page!
 <br>
   <img src="Monkey.gif" alt="Sorry, this meme can't appear on this browser/device." height="400" width="650">
 <iframe width="560" height="315" src="http://www.youtube.com/embed/68ugkg9RePc?autoplay=1&loop=1&playlist=68ugkg9RePc" frameborder="0" allowfullscreen></iframe>
-  </html>
+<button onclick="window.location.href = 'TrollFreeHomePage.html';">Back to Home Page</button>  
+</html>
