--- a/Memes.html
+++ b/Memes.html
@@ -21,6 +21,8 @@ Memes
 <br>
 <img src="meatloaf.gif" alt="Sorry, this meme can't appear on this browser/device." height="400" width="650">
 <br>
+<img src="Sleep.webp" alt="Sorry, this meme can't appear on this browser/device.">
+<br>
   <!<legend><!Do you like this new meme style?</legend>
   <!<label for="the_question"><!Yes, quite nice.</label>
 <!<input type="checkbox" name="the_question" id="the_question" value="1">
