--- a/Memes.html
+++ b/Memes.html
@@ -25,6 +25,8 @@ Memes
 <br>
 <img src="smurf.jpg" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
+<img src="bug.jpg" alt="Sorry, this meme can't appear on this browser/device.">
+<br>
   <!<legend><!Do you like this new meme style?</legend>
   <!<label for="the_question"><!Yes, quite nice.</label>
 <!<input type="checkbox" name="the_question" id="the_question" value="1">
