--- a/Memes.html
+++ b/Memes.html
@@ -25,7 +25,7 @@ Memes
 <br>
 <img src="smurf.jpg" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
-<img src="bug.jpg" alt="Sorry, this meme can't appear on this browser/device.">
+<img src="bugs.jpg" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
   <!<legend><!Do you like this new meme style?</legend>
   <!<label for="the_question"><!Yes, quite nice.</label>
